--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,10 +17,22 @@ a,p {
 	text-align: center;
 }
 
-video {
+.centervideo {
+	margin: auto;
+	width: 50%;
+	
+} 
+
+/* video {
 	margin: 0 auto;
 	display: block;	
-}
+} */
+
+#iphone {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+} 
 
 .personal, .coming {
 	font-family: Verdana;
